--- a/index.css
+++ b/index.css
@@ -19,6 +19,11 @@ h1 {
     color: #333;
 }
 
+.campeon {
+    text-align: center;
+    color: #333
+}
+
 .match-info {
     display: flex;
     flex-direction: column;
