--- a/index.css
+++ b/index.css
@@ -6,12 +6,12 @@ body {
 }
 
 .container {
-    max-width: 800dvw;
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    height: 1000dvh
+    height: 100dvh;
 }
 
 h1 {
@@ -22,6 +22,7 @@ h1 {
 .campeon {
     text-align: center;
     color: #333
+    font-weight: 500;
 }
 
 .match-info {
@@ -41,24 +42,3 @@ h1 {
     height: 100px;
     object-fit: contain;
 }
-
-.vs {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.stadium-info {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.countdown {
-    text-align: center;
-}
-
-#timer {
-    font-size: 36px;
-    font-weight: bold;
-    color: #333;
-}
-
