--- a/index.css
+++ b/index.css
@@ -42,6 +42,12 @@ body {
   font-weight: 800;
 }
 
+.fireworks {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 @keyframes fadeIn {
   from { opacity: 0; }
   to { opacity: 1; }
