--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
+  position: relative;
 }
 
 .container {
@@ -44,8 +45,8 @@ body {
 
 .fireworks {
   position: absolute;
-  top: 0;
-  left: 0;
+  inset: 0;
+  width: auto;
 }
 
 @keyframes fadeIn {
